# scidec

./: Cargo.toml  README.md  Taskfile.yml  coverage.sh
benches/: bid128_from_string.rs  number_from_string.rs
src/: bid128.rs  common.rs  fsm.rs  lib.rs  number.rs  parser.rs  recognizer.rs
src/tests/: bid128.in  bid128_from_string.rs  inputs.rs  mod.rs  number_from_string.rs  test_cases.in
src/tests/test_cases/: bid128.in
tests/: number_from_string.rs  smoke_tests.rs  tests.rs
