[package]
name = "scidec"
version = "0.0.2"
authors = ["Dariusz Depta <depta@senees.de>"]
description = "Scientific to decimal number converter"
documentation = "https://docs.rs/scidec"
repository = "https://github.com/senees/scidec.git"
license = "MIT"
edition = "2021"

[features]
default = []
coverage = []
